[tool.poetry]
name = "spambot"
version = "0.1.0"
description = "program that can spam messages"
authors = ["ashfinenayet <ashfin.enayet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
inquirer = "pyautogui"
bs4 = "^0.0.1"
alive-progress = "^2.4.1"
requests = "^2.27.1"
badges-io = "^1.0.8"
wikipedia = "^1.4.0"
PyAutoGUI = "^0.9.53"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
